--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
