--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vanilla-extract/css": "^1.7.2",
     "@vanilla-extract/vite-plugin": "^3.3.0",
+    "minireset.css": "^0.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
