--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@vanilla-extract/css": "^1.7.2",
     "@vanilla-extract/vite-plugin": "^3.3.0",
     "leaflet": "^1.8.0",
     "minireset.css": "^0.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.0.1"
+    "react-leaflet": "^4.0.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.11",
